# ai-model-forge

./: Dockerfile  README.md  constraints.txt  docker-compose.yml  requirements.txt  titans_train.py
bitnet-mamba-hybrid/: COMMANDS.md  GRADIENT_CHECKPOINT_COMPARISON.md  MEMORY_OPTIMIZATION.md  PORTUGUESE_DATASETS.md  README.md  analyze_loss_curve.py  benchmark_checkpoint.sh  checkpoint_config.json  data_loader.py  diagnostic_checkpoint.py  inference_hybrid.py  preprocess_datasets.py  requirements-infer.txt  requirements-preprocess.txt  requirements-train.txt  requirements.txt  test_portuguese_datasets.py  train_high_throughput.sh  train_hybrid-mamba-bitnet.py  train_memory_optimized.sh  train_no_checkpoint.sh  train_recovery_204m.sh  train_recovery_phase2.sh  train_recovery_phase3.sh  train_scaled_204m.sh  train_scaled_204m_safe.sh  train_stable.sh  train_ultra_memory_safe.sh  training_manager.py  validate_recovery.py  validate_training.py
bitnet-mamba-hybrid/dashboard/: requirements.txt  server.py
bitnet-mamba-hybrid/docs/: DIAGNOSTIC_REPORT.md  DIAGNOSTIC_SUMMARY.txt  INSTRUCTIONS.md  SCALING_ANALYSIS_255M.md  overfit_test_result.txt
bitnet-mamba-hybrid/scripts/: train_high_throughput.sh  train_memory_optimized.sh  train_recovery_204m.sh  train_recovery_phase2.sh  train_recovery_phase3.sh  train_scaled_204m.sh  train_scaled_204m_safe.sh  train_stable.sh  train_ultra_memory_safe.sh
bitnet-mamba-hybrid/tools/: test_overfit_sanity.py
bitnet-mamba-hybrid/venv-bitnet-mamba/: pyvenv.cfg
dataset-financing-infos/: .gitignore  README.md  constraints.txt  requirements.txt
dataset-financing-infos/configs/: sources.yaml  topics.yaml
dataset-financing-infos/dataset/: dataset_2025_2026-V2.jsonl  dataset_2025_2026-V2_report.json  dataset_2025_2026-V3.jsonl  dataset_2025_2026-V3_report.json  dataset_2025_2026-V4.jsonl  dataset_2025_2026-V4_report.json  dataset_2025_2026-V6_report.json  dataset_2025_2026.jsonl  dataset_2025_2026_report.json  dataset_2025_2026_v2_report.json  test_config.jsonl  test_config_report.json  verification_v3.jsonl  verification_v3_report.json
dataset-financing-infos/dataset-generator/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
dataset-financing-infos/dataset-generator/src/: __init__.py  main.py
dataset-financing-infos/dataset-generator/src/collectors/: __init__.py  academic.py  base.py  books.py  legal.py  news.py  social_media.py  videos.py  wikipedia.py
dataset-financing-infos/dataset-generator/src/config/: settings.py  sources.yaml  topics.yaml
dataset-financing-infos/dataset-generator/src/guardrails/: __init__.py  bias_checker.py  content_filter.py  language_detector.py  pii_detector.py
dataset-financing-infos/dataset-generator/src/processors/: __init__.py  cleaner.py  deduplicator.py  formatter.py  quality_filter.py  tokenizer_check.py
dataset-financing-infos/dataset-generator/src/schemas/: __init__.py  dataset.py
dataset-financing-infos/dataset-generator/src/storage/: __init__.py  checkpoint.py  output_writer.py  state_manager.py
dataset-financing-infos/dataset-generator/src/utils/: __init__.py  logger.py  metrics.py  rate_limiter.py  retry.py
dataset-financing-infos/dataset-generator/tests/: __init__.py  test_cli.py  test_collectors.py  test_guardrails.py  test_processors.py
dataset-financing-infos/finetune/: README.md  README_DATASET_FORMATS.md  convert-gguf-with-llama.sh  convert-gguf-with-unsloth.py  convert-gguf.py  data_utils.py  demo_tui.py  requirements.txt  reset-env.sh  test_data_formats.py  teste-inferrencia.py  train.py  tui_utils.py
dataset-financing-infos/src/: cli.py
dataset-financing-infos/src/pipeline/: ner.py  (+5 more)
dataset-financing-infos/tests/: test_guardrails.py  test_ner.py  test_schema.py
dataset-financing-infos/venv-financing-infos/: pyvenv.cfg
hybrid-moe-1b/: README.md  config.yaml  dataset_report.json  inference.py  inference_optimized.py  model.py  train.py  validate_dataset.py
hybrid-moe-1b_v2/: ARCHITECTURE_AUDIT.md  GIGAVERBO_V2_INTEGRATION.md  V2_CHANGES.md  data_config_v2.yaml  data_pipeline_v2.py  inference_v2.py  model_v2.py  prepare_gigaverbo_v2.py  train_v2.py
(+13 files in other folders)
